Management API: Add a "mayEnable" field to ExtensionInfo.

r496521 changed how ManagementPolicy::UserMayLoad is handled. As a result,
installed extensions blacklisted by management policy are now disabled (instead
of remaining silently installed). These extensions now also show up as part of
chrome.management.getAll(). 

To help distinguish this new case, this CL adds a new field "mayEnable" to the
ExtensionInfo returned as part of the Management API. This is only returned for
disabled extensions.

BUG=758785

Change-Id: I15fc82d1cfb70252c63900214f4a973f90359a52
Reviewed-on: https://chromium-review.googlesource.com/631556
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Commit-Queue: Karan Bhatia <karandeepb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497311}
Former-commit-id: e795bd9fa191bf9b563c5f17fa6aabcb762dc933